# assistant-ui

./: .gitignore  CONTRIBUTING.md  PERFORMANCE_ANALYSIS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: big-dragons-push.md  brave-ladybugs-pretend.md  bright-stingrays-approve.md  chilly-numbers-count.md  clever-apes-study.md  dirty-clouds-grin.md  dirty-hairs-type.md  eleven-pumpkins-build.md  every-readers-allow.md  famous-rocks-develop.md  fluffy-brooms-dream.md  fresh-readers-camp.md  khaki-numbers-shave.md  khaki-seals-smash.md  mighty-actors-brake.md  moody-clocks-do.md  neat-boxes-count.md  pink-coins-sell.md  plenty-timers-itch.md  puny-queens-smell.md  quiet-icons-pull.md  rare-sheep-punch.md  rich-numbers-protect.md  ripe-owls-arrive.md  rotten-news-wish.md  sharp-bugs-itch.md  short-insects-compare.md  silent-phones-tap.md  silly-dingos-protect.md  silver-lions-tease.md  small-suits-stare.md  smart-panthers-laugh.md  smooth-cows-sparkle.md  smooth-radios-bake.md  sour-dogs-cry.md  sour-paws-laugh.md  sour-phones-join.md  spicy-llamas-bow.md  tasty-wings-smoke.md  tender-laws-sing.md  (+6 more)
.github/workflows/: code-quality.yaml
apps/docs/: next.config.ts  package.json
python/assistant-stream/: README_LANGGRAPH.md  pyproject.toml
python/assistant-stream/src/assistant_stream/: __init__.py  assistant_stream_chunk.py  create_run.py  state_manager.py  state_proxy.py
python/assistant-stream/src/assistant_stream/modules/: langgraph.py  tool_call.py
python/assistant-stream/src/assistant_stream/serialization/: data_stream.py
(+93 files in other folders)
